--- a/package.json
+++ b/package.json
@@ -36,8 +36,15 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "eslint-plugin-vue/multi-word-component-names": "off",
+      "vue/multi-word-component-names": "off"
+    }
   },
+  "eslintIgnore": [
+    "node_modules/",
+    "src/components"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
