add google analytics

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^3.2.13",
+    "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
